c++: fix debug info for array temporary [PR107154]

In the testcase the elaboration of the array init that happens at genericize
time was getting the location info for the end of the function; fixed by
doing the expansion at the location of the original expression.

	PR c++/107154

gcc/cp/ChangeLog:

	* cp-gimplify.cc (cp_genericize_init_expr): Use iloc_sentinel.
	(cp_genericize_target_expr): Likewise.

gcc/testsuite/ChangeLog:

	* g++.dg/debug/dwarf2/lineno-array1.C: New test.